qa: csrf moved + data order

--- a/Inotki/templates/tasks/task_list.html
+++ b/Inotki/templates/tasks/task_list.html
@@ -28,7 +28,7 @@
         <!--ADMIN-->
         <ul>
             <li>
-                <!-- Only the admin can acces to selector-->
+                <!-- Only the admin can access to selector-->
                 {% if admin %}{{ task.user }} :
                     {{ task.creation_date }} -
                     {{ task.title }} -
